Wed Apr 14 15:04:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSPasteboard.m: Remove 'system()' and use NSTask to launch
	gpbs if necessary instead.
	* Source/NSWorkspace.m: Removed a load of obsolete code - depend on
	NSBundle and NSTask to do the right thing.

Fri Apr  9 16:08:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSStringDrawing.m: Further hacking of the string drawing stuff
	to (hopefully) support fonts, colors, tabs, underline, kern, leading.
	Very little actually tested and no line-break support yet.

Thu Apr  8 21:08:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSWindow.m: Tidy window view stuff
	* Source/NSWorkspace.m: Improve app launching to try various locations.
	* Source/GSServicesManager.m: Workaround compiler bug and remove
	unused method.
	* Headers/AppKitGSServicesManager.h: Remove unused method.

Wed Apr  7 21:35:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSCell.m: Position image correctly in flipped view.

Wed Apr  7 10:10:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Images/GNUmakefile: Install all images
	* Source/NSControl.m: ([setCell:]) permit nil cell values.

Tue Apr  6 14:50:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Applied Felipes fixes from mgstep.

Thu Apr  1 20:45:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSStringDrawing.m: improved paragraph style handling and
	added slight optimisation to restore (barely) tolerable performance.
	Further optimisation to wait until it all works properly.

1999-04-01  Adam Fedor  <fedor@gnu.org>

	* Model/test.m (main): Change GSContext to NSGraphicContext

Thu Apr  1 20:45:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSTextField.m: init with same default values as OPENSTEP
	* Source/NSPanel.m: Tidied.
	* Source/NSStringDrawing.m: First go at support for paragraph styles,
	tabs, and kerning.
